--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>2.3.1</version>
         </dependency>
+        <!--快速生成get set tostring方法-->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -52,6 +53,12 @@
             <artifactId>mybatis-spring-boot-starter-test</artifactId>
             <version>2.3.1</version>
             <scope>test</scope>
+        </dependency>
+<!--        整合email-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+            <version>2.1.5.RELEASE</version>
         </dependency>
     </dependencies>
 
