--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,16 @@ mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.type-aliases-package=com.example.community1.entity
 mybatis.configuration.useGeneratedKeys=true
 mybatis.configuration.mapUnderscoreToCamelCase=true
+
+#email
+spring.mail.host=smtp.163.com
+spring.mail.port=465
+spring.mail.username=jaywn0809@163.com
+spring.mail.password=VZGCSLEDTRWTCUAP
+spring.mail.protocol=smtps
+spring.mail.properties.mail.smtp.ssl.enable=true
+
+#logger
+#com.example.community1????????debug
+logging.level.com.example.community1=debug;
+
